kubernetes/recommender/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recommender
  namespace: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: recommender
  template:
    metadata:
      labels:
        app: recommender
    spec:
      containers:
      - name: recommender
        image: langleu/ma_recommender:latest
        ports:
        - name: http
          containerPort: 8088
        livenessProbe:
          httpGet:
            path: /api/v1/health
            port: http
          initialDelaySeconds: 20
        readinessProbe:
          httpGet:
            path: /api/v1/health
            port: http
          initialDelaySeconds: 10
