kubernetes/recommender/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: recommender
  namespace: frontend
  labels:
    app: recommender
spec:
  clusterIP: None
  ports:
  - port: 8088
    name: http
  selector:
    app: recommender
