kubernetes/recommender/ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: recommender
  namespace: frontend
spec:
  rules:
  - http:
      paths:
      - path:
        backend:
          serviceName: recommender
          servicePort: 8088
